cmd/fox-proxy/k8s/01-fox-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fox-proxy
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fox-proxy
  template:
    metadata:
      labels:
        app: fox-proxy
    spec:
      containers:
        - name: fox-proxy
          image: uhub.service.ucloud.cn/entropypool/fox-proxy:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: fox-proxy-http
  namespace: kube-system

spec:
  ports:
    - name: http
      port: 50000
  selector:
    app: fox-proxy

---
apiVersion: v1
kind: Service
metadata:
  name: fox-proxy
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c

spec:
  ports:
    - name: grpc
      port: 50001
  selector:
    app: fox-proxy

---
apiVersion: v1
kind: Service
metadata:
  name: fox-proxy-sgrpc
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c

spec:
  ports:
    - name: secure-grpc
      port: 50003
  selector:
    app: fox-proxy
